--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   intl_phone_field: ^3.2.0
   pin_code_fields: ^8.0.1
   carousel_slider: ^5.0.0
+  http: ^1.3.0
 
 dev_dependencies:
   flutter_test:
